modal z-index fix

--- a/frontend/src/components/OptionsBar/OptionsBar.css
+++ b/frontend/src/components/OptionsBar/OptionsBar.css
@@ -28,7 +28,6 @@
 }
 
 .options-modal {
-    z-index: 100;
     position: relative;
     top: 10%;
     left: 7%;
@@ -41,4 +40,5 @@
     border: 5px solid orange;
     outline: 2px solid orange;
     outline-offset: -10px;
+    z-index: 10;
 }
